Name: libxml-sax
Version: 0.4
stability: experimental
Synopsis: Bindings for the libXML2 SAX interface
License: GPL-3
License-file: License.txt
Author: John Millikin
maintainer: jmillikin@gmail.com
copyright: John Millikin 2009-2010, Dmitry Astapov 2010
Build-Type: Simple
Cabal-Version: >=1.6
Category: Text, XML, Parsing
tested-with: GHC==6.10.4
extra-source-files: Tests.hs

source-repository head
  type: darcs
  location: http://ianen.org/haskell/bindings/libxml-sax/

library
  ghc-options: -Wall -fno-warn-unused-do-bind

  build-tools: c2hs

  build-depends:
      base >=3 && < 5

  extra-libraries: xml2
  pkgconfig-depends: libxml-2.0

  exposed-modules:
    Text.XML.LibXML.SAX
