name: libxml-sax
version: 0.7.3
license: MIT
license-file: license.txt
author: John Millikin
maintainer: jmillikin@gmail.com
build-type: Simple
cabal-version: >= 1.6
category: Foreign, Text, XML, Parsing
stability: experimental
homepage: https://john-millikin.com/software/haskell-libxml/
bug-reports: mailto:jmillikin@gmail.com

synopsis: Bindings for the libXML2 SAX interface
description:

extra-source-files: hslibxml-shim.h

source-repository head
  type: bazaar
  location: https://john-millikin.com/branches/haskell-libxml/0.7/

source-repository this
  type: bazaar
  location: https://john-millikin.com/branches/haskell-libxml/0.7/
  tag: haskell-libxml_0.7.3

library
  ghc-options: -Wall -O2
  cc-options: -Wall

  build-depends:
      base >= 4.0 && < 5.0
    , bytestring >= 0.9
    , text >= 0.7 && < 0.12
    , xml-types >= 0.3 && < 0.4

  exposed-modules:
    Text.XML.LibXML.SAX

  c-sources: hslibxml-shim.c

  extra-libraries: xml2
  pkgconfig-depends: libxml-2.0
