name: libxml-sax-tests
version: 0
build-type: Simple
cabal-version: >= 1.6

executable libxml-sax_tests
  main-is: Properties.hs
  ghc-options: -Wall -O2

  build-depends:
      base > 3 && < 5
    , bytestring
    , containers
    , libxml-sax
    , text
    , xml-types
    , HUnit == 1.2.*
    , test-framework >= 0.2 && < 0.4
    , test-framework-hunit == 0.2.6
