name: libxml-sax-tests
version: 0
build-type: Simple
cabal-version: >= 1.6

executable libxml-sax-tests
  main-is: Tests.hs
  ghc-options: -Wall -O2

  build-depends:
      base > 4.1 && < 5.0
    , bytestring
    , containers
    , libxml-sax
    , text
    , transformers
    , xml-types
    , chell >= 0.3 && < 0.4
